# PROJECT-MG-COMPUTERS

./: .gitignore  README.md
.github/workflows/: auth-deploy.yml  auth-dockerhub.yml  frontend-deploy.yml  frontend-dockerhub.yml  products-deploy.yml  products-dockerhub.yml  shipping-details-deploy.yml  shipping-details-dockerhub.yml  test-deploy-front.yml  test-deploy-gqlp.yml  test-deploy-pdb.yml
BackEnd/DataBases/BillingDetails/: Dockerfile  billing-details.json  init-mongo.sh
BackEnd/DataBases/InoviceDetails/: SQLQuery.sql
BackEnd/DataBases/Invoice/: SQLQuery.sql
BackEnd/DataBases/Orders/: Dockerfile  README.md
BackEnd/DataBases/Payment/: SQLQuery.sql
BackEnd/DataBases/ShippingDetails/: Dockerfile  init-mongo.sh
BackEnd/DataBases/TrackingDetails/: init-mongo.sh  tracking-details.json
BackEnd/DataBases/Users/: SQLQuery.sql
BackEnd/DataBases/cart/: Dockerfile  README.md  redis.conf
BackEnd/DataBases/config/: database.js
BackEnd/DataBases/products/: README.md  init-mongo.sh  products.json
BackEnd/Domains/Auth/: README.md
BackEnd/Domains/Auth/role-auth/: Cargo.toml  Dockerfile
BackEnd/Domains/Auth/role-auth/proto/: auth.proto
BackEnd/Domains/Auth/role-auth/src/: main.rs
BackEnd/Domains/Cart/: README.md
BackEnd/Domains/Products/: README.md
Dev/: README.md  docker-compose.yml  nginx.conf  redis.conf
Docs/: TODO List.md
FrontEnd/: README.md
FrontEnd/global-tune/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
Infra/: README.md
Infra/bootstrap/: docker-ec2.sh
Security/: README.md
(+380 files in other folders)
