[package]
name = "role-auth"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "auth-service"
path = "src/main.rs"

[dependencies]
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
tonic = "0.12.3"
prost = "0.13.4"
jsonwebtoken = "9.3.0"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
tonic-build = "0.12.3"